# lockdev

./: COPYRIGHT  ChangeLog  ChangeLog.old  Makefile  Makefile.am  Makefile.good  NEWS  README  Rules.mk  SHLIBS  configure.ac  lockdev.pc.in
LockDev/: Changes  LockDev.pm  LockDev.xs  MANIFEST  Makefile.PL  test.pl  typemap
debian/: NEWS  README.debug  changelog  control  copyright  dbg_postinst  dbg_postrm  dbg_prerm  liblockdev1-dbg.dirs  liblockdev1-dbg.docs  liblockdev1-dev.dirs  liblockdev1-dev.manpages  liblockdev1-perl.dirs  liblockdev1.postinst  policy  postinst  postrm  rules
docs/: LSB.991201  Makefile.am  lockdev.3  lockdev.8
src/: .gitignore  Makefile.am  baudboy.h  baudboy_test.c  lockdev.c  lockdev.h  sample.c  ttylock.h
